syntax = "proto3";

option java_package = "com.mafei.model";
option java_multiple_files = true;

message SampleRequest {
    string msg = 1;
}

message SampleResponse {
    string datetime = 1;
}
service SampleService {
    rpc Test(SampleRequest) returns (SampleResponse);
}
